--- a/templates/views/index.ejs
+++ b/templates/views/index.ejs
@@ -57,7 +57,7 @@
               <div class="col-lg-7 order-last order-lg-first">
                 <div class="banner-text">
                   <h6>
-                    <span class="dash"><%= new Date()%></span>
+                    <span class="dash"><%= date%></span>
                   </h6>
                   <h6 class="space-caps">Welcome! I’m Abdulladif Roble</h6>
                   <h2>
