--- a/templates/views/login.ejs
+++ b/templates/views/login.ejs
@@ -73,6 +73,7 @@
                           id="exampleInputEmail1"
                           aria-describedby="emailHelp"
                           name="username"
+                          autocomplete="off"
                         />
                         <div id="emailHelp" class="form-text">
                           We'll never share your email with anyone else.
@@ -87,6 +88,7 @@
                           class="form-control"
                           id="exampleInputPassword1"
                           name="password"
+                          autocomplete="off"
                         />
                       </div>
                       <div class="mb-3 form-check">
