--- a/templates/partials/sideNav.ejs
+++ b/templates/partials/sideNav.ejs
@@ -23,8 +23,9 @@
         <div class="overlay"></div>
         <ul>
           <li>
-            <a href="/" class="active"
-              ><i class="fas fa-home"></i>
+            <!-- <a href="/" class="active"> -->
+            <a href="/">
+              <i class="fas fa-home"></i>
               <span>Home</span>
             </a>
           </li>
