--- a/templates/views/resume.ejs
+++ b/templates/views/resume.ejs
@@ -315,7 +315,7 @@
                             <i class="fas fa-graduation-cap"></i>
                           </div>
                           <h5>Masters in procrastination 👨🏾‍🎓</h5>
-                          <h6>Birth - Today 😜</h6>
+                          <h6>Birth - To Date 😜</h6>
                           <!-- <p>
                             Harvard University is my sit amet, con sectetur
                             adipisicing elit.
