--- a/templates/views/index.ejs
+++ b/templates/views/index.ejs
@@ -59,7 +59,7 @@
                   <h6>
                     <span class="dash"><%= date%></span>
                   </h6>
-                  <h6 class="space-caps">Welcome! I’m Abdulladif Roble</h6>
+                  <h6 class="space-caps">Welcome! I’m Abdulladif Roble 🐢</h6>
                   <h2>
                     A<span class="green"> Developer</span> who develops sh**
                     that somehow works!🤯
