--- a/templates/views/login.ejs
+++ b/templates/views/login.ejs
@@ -63,6 +63,8 @@
                     </div>
                     <% } %>
                     <form action="/login" method="post">
+                      <h3><center>Login</center></h3>
+                      <br />
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label"
                           >Username</label
@@ -75,9 +77,6 @@
                           name="username"
                           autocomplete="off"
                         />
-                        <div id="emailHelp" class="form-text">
-                          We'll never share your email with anyone else.
-                        </div>
                       </div>
                       <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label"
@@ -90,16 +89,6 @@
                           name="password"
                           autocomplete="off"
                         />
-                      </div>
-                      <div class="mb-3 form-check">
-                        <input
-                          type="checkbox"
-                          class="form-check-input"
-                          id="exampleCheck1"
-                        />
-                        <label class="form-check-label" for="exampleCheck1"
-                          >Check me out</label
-                        >
                       </div>
                       <button type="submit" class="btn btn-primary">
                         Submit
