--- a/templates/views/portfolio.ejs
+++ b/templates/views/portfolio.ejs
@@ -59,7 +59,7 @@
         <!-- Portfolio Demo Btn Start -->
       <style>
         .portfolio-item{
-          padding:1%;
+          margin:1%;
         }
         .venobox img{
           min-height:180px;
