--- a/templates/partials/sideNav.ejs
+++ b/templates/partials/sideNav.ejs
@@ -6,7 +6,7 @@
       <div class="logo-btn">
         <!-- Logo Start -->
         <div class="logo">
-          <a href="/"><img src="/img/logo/logo.png" alt="Logo" /></a>
+          <a href="/"><img src="/img/logo/logo1.png" alt="Logo" /></a>
         </div>
         <!-- Logo End -->
         <!-- Manu Btn Start -->
