--- a/templates/views/portfolio.ejs
+++ b/templates/views/portfolio.ejs
@@ -74,9 +74,9 @@
                 <a
                   class="venobox"
                   data-gall="gallery01"
-                  href="img/portfolio/weather.png"
+                  href="img/portfolio/weather.PNG"
                 >
-                  <img src="img/portfolio/weather.png" alt="portfolio-img" />
+                  <img src="img/portfolio/weather.PNG" alt="portfolio-img" />
                 </a>
                 <a href="https://roble-weather-app.herokuapp.com/" target="_blank"><h3>Weather App</h3></a>
               </div>
@@ -86,9 +86,9 @@
                 <a
                   class="venobox"
                   data-gall="gallery01"
-                  href="img/portfolio/covid19.png"
+                  href="img/portfolio/covid19.PNG"
                 >
-                  <img src="img/portfolio/covid19.png" alt="portfolio-img" />
+                  <img src="img/portfolio/covid19.PNG" alt="portfolio-img" />
                 </a>
                 <a class="project-name"><h3>Covid19 Stats App</h3></a>
               </div>
@@ -98,9 +98,9 @@
                 <a
                   class="venobox"
                   data-gall="gallery01"
-                  href="img/portfolio/dalbofood.png"
+                  href="img/portfolio/dalbofood.PNG"
                 >
-                  <img src="img/portfolio/dalbofood.png" alt="portfolio-img" />
+                  <img src="img/portfolio/dalbofood.PNG" alt="portfolio-img" />
                 </a>
                 <a href="https://www.dalbofood.com" target="_blank"><h3>DalboFood</h3></a>
               </div>
@@ -110,9 +110,9 @@
                 <a
                   class="venobox"
                   data-gall="gallery01"
-                  href="img/portfolio/somwork.png"
+                  href="img/portfolio/somwork.PNG"
                 >
-                  <img src="img/portfolio/somwork.png" alt="portfolio-img" />
+                  <img src="img/portfolio/somwork.PNG" alt="portfolio-img" />
                 </a>
                 <a href="https://www.somwork.com" target="_blank"><h3>SomWork</h3></a>
               </div>
@@ -122,9 +122,9 @@
                 <a
                   class="venobox"
                   data-gall="gallery01"
-                  href="img/portfolio/alpha.png"
+                  href="img/portfolio/alpha.PNG"
                 >
-                  <img src="img/portfolio/alpha.png" alt="portfolio-img" />
+                  <img src="img/portfolio/alpha.PNG" alt="portfolio-img" />
                 </a>
                 <a href="http://www.alphatech.so/" target="_blank"><h3>AlphaTech</h3></a>
               </div>
