fixed portfolio images

--- a/templates/views/portfolio.ejs
+++ b/templates/views/portfolio.ejs
@@ -76,7 +76,7 @@
                   data-gall="gallery01"
                   href="img/portfolio/weather.PNG"
                 >
-                  <img src="img/portfolio/weather.PNG" alt="portfolio-img" />
+                  <img src="img/portfolio/weather.PNG" alt="A simple weather application" />
                 </a>
                 <a href="https://roble-weather-app.herokuapp.com/" target="_blank"><h3>Weather App</h3></a>
               </div>
@@ -88,7 +88,7 @@
                   data-gall="gallery01"
                   href="img/portfolio/covid19.PNG"
                 >
-                  <img src="img/portfolio/covid19.PNG" alt="portfolio-img" />
+                  <img src="img/portfolio/covid19.PNG" alt="Covid-19 stats app" />
                 </a>
                 <a class="project-name"><h3>Covid19 Stats App</h3></a>
               </div>
@@ -100,7 +100,7 @@
                   data-gall="gallery01"
                   href="img/portfolio/dalbofood.PNG"
                 >
-                  <img src="img/portfolio/dalbofood.PNG" alt="portfolio-img" />
+                  <img src="img/portfolio/dalbofood.PNG" alt="DalboFood first online food delivery company" />
                 </a>
                 <a href="https://www.dalbofood.com" target="_blank"><h3>DalboFood</h3></a>
               </div>
@@ -112,7 +112,7 @@
                   data-gall="gallery01"
                   href="img/portfolio/somwork.PNG"
                 >
-                  <img src="img/portfolio/somwork.PNG" alt="portfolio-img" />
+                  <img src="img/portfolio/somwork.PNG" alt="SomWork is the first freelacing company in Somaliland" />
                 </a>
                 <a href="https://www.somwork.com" target="_blank"><h3>SomWork</h3></a>
               </div>
@@ -124,7 +124,7 @@
                   data-gall="gallery01"
                   href="img/portfolio/alpha.PNG"
                 >
-                  <img src="img/portfolio/alpha.PNG" alt="portfolio-img" />
+                  <img src="img/portfolio/alpha.PNG" alt="AlphaTech one of the leading appliance stores in Somaliland" />
                 </a>
                 <a href="http://www.alphatech.so/" target="_blank"><h3>AlphaTech</h3></a>
               </div>
@@ -136,7 +136,7 @@
             data-gall="gallery01"
             href="img/portfolio/SAMS.jpg"
           >
-            <img src="img/portfolio/SAMS.jpg" alt="portfolio-img" />
+            <img src="img/portfolio/SAMS.jpg" alt="SAMS a agriTech startup" />
           </a>
           <a href="#"><h3>SAMS</h3></a>
         </div>
