--- a/templates/views/contact.ejs
+++ b/templates/views/contact.ejs
@@ -104,7 +104,10 @@
               <div class="col-md-6 col-lg-4">
                 <div class="contact-map">
                   <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1826.6838651648823!2d90.45649702155303!3d23.69855871437011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b767a022cd4b%3A0xaf33907e219d127!2sRayerbag%2C%20Dhaka!5e0!3m2!1sen!2sbd!4v1591172693035!5m2!1sen!2sbd"
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1654.1541145601157!2d44.03602568442738!3d9.572523548594594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sso!4v1611039302119!5m2!1sen!2sso"
+                    width="600"
+                    height="450"
+                    frameborder="0"
                     style="border: 0"
                     allowfullscreen=""
                     aria-hidden="false"
