--- a/templates/views/about.ejs
+++ b/templates/views/about.ejs
@@ -69,23 +69,25 @@
                 <div class="about-text">
                   <h6 class="space-caps">I’m Abdulladif Roble</h6>
                   <h6>
-                    <strong
-                      >For over 12 years I have been successfully providing
-                      business information to poeple.</strong
-                    >
+                    <strong>Techie based in the Horn of Africa!</strong>
                   </h6>
                   <p class="des-text">
-                    Abdulladif Roble is a software engineer and a product
-                    developer who has more than 7 years’ experience. He took up
-                    managerial roles at high profile tech companies in
-                    Somaliland he has experience in systems & software
-                    development, operations management, procurement management,
-                    product development, information technology management and
-                    business development. He played a vital role in developing
-                    an IVR system which helps local farmers in drought inflicted
-                    regions in Somaliland alongside local NGO’S. He currently
-                    holds a degree in software engineering but also currently
-                    pursuing a masters in project management.
+                    I am a young brother out here trying to make an honest
+                    living lol. I grew up in the UK but graduated from a local
+                    university in Hargeisa 🤯 I know right 😂 (I will share that
+                    experience in my blog). For the past year and a half, I have
+                    been working for a tech company as a lead developer role
+                    working on some major governmental projects. Prior to that I
+                    have launched multiple startups the most iconic being SAMS
+                    where we developed an IVR system which would help local
+                    farms in drought inflicted regions in Somaliland alongside
+                    local NGO’s
+                    <a
+                      style="color: green"
+                      href="https://disrupt-africa.com/2018/04/20/meet-sams-somalias-first-marketplace-for-farm-goods/"
+                      target="_blank"
+                      >Read artcile about SAMS</a
+                    >
                   </p>
                   <!-- About Info Start -->
                   <div class="about-info">
