edited about page

--- a/templates/views/about.ejs
+++ b/templates/views/about.ejs
@@ -80,8 +80,7 @@
                     working on some major governmental projects. Prior to that I
                     have launched multiple startups the most iconic being SAMS
                     where we developed an IVR system which would help local
-                    farms in drought inflicted regions in Somaliland alongside
-                    local NGO’s
+                    farms in drought inflicted regions in Somaliland.
                     <a
                       style="color: green"
                       href="https://disrupt-africa.com/2018/04/20/meet-sams-somalias-first-marketplace-for-farm-goods/"
