updated about page

--- a/templates/views/about.ejs
+++ b/templates/views/about.ejs
@@ -85,7 +85,7 @@
                       style="color: green"
                       href="https://disrupt-africa.com/2018/04/20/meet-sams-somalias-first-marketplace-for-farm-goods/"
                       target="_blank"
-                      >Read artcile about SAMS</a
+                      >Read article about SAMS</a
                     >
                   </p>
                   <!-- About Info Start -->
