--- a/templates/views/contact.ejs
+++ b/templates/views/contact.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>RobleCodes</title>
+    <title>RobleYare</title>
 
     <!-- Apple Favicon -->
     <link rel="apple-touch-icon" href="img/logo/favicon.png" />
@@ -80,7 +80,7 @@
                     <div class="contact-icon">
                       <i class="fas fa-envelope"></i>
                     </div>
-                    <h5>Mail: <span>hi@robleyare.com</span></h5>
+                    <h5>Mail: <span>abdulladif0042@gmail.com</span></h5>
                     <p>Shoot me an email!</p>
                   </div>
                 </div>
