--- a/templates/views/index.ejs
+++ b/templates/views/index.ejs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>RobleCodes</title>
+    <title>RobleYare</title>
 
     <!-- Apple Favicon -->
     <link rel="apple-touch-icon" href="img/logo/favicon.png" />
