changed about page

--- a/templates/partials/sideNav.ejs
+++ b/templates/partials/sideNav.ejs
@@ -75,11 +75,7 @@
         <span class="social-title">Social</span>
         <ul>
           <li>
-            <a
-              href="https://www.linkedin.com/in/abdulladif-roble-892681118/"
-              target="_blank"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
+            <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
           </li>
           <li>
             <a href="https://github.com/ARoble" target="_blank"
