--- a/templates/views/about.ejs
+++ b/templates/views/about.ejs
@@ -60,7 +60,7 @@
               <div class="col-lg-5">
                 <!-- About Profile Start -->
                 <div class="about-profile">
-                  <img src="img/about/me.png" alt="about-profile" />
+                  <img src="img/about/no.png" alt="about-profile" />
                 </div>
                 <!-- About Profile End -->
               </div>
@@ -76,11 +76,14 @@
                     living lol. I grew up in the UK but graduated from a local
                     university in Hargeisa 🤯 I know right 😂 (I will share that
                     experience in my blog). For the past year and a half, I have
-                    been working for a tech company as a lead developer role
-                    working on some major governmental projects. Prior to that I
-                    have launched multiple startups the most iconic being SAMS
+                    been working for a tech company as a lead developer working
+                    on some major governmental projects. Prior to that I have
+                    launched multiple startups the most successful being SAMS
                     where we developed an IVR system which would help local
-                    farms in drought inflicted regions in Somaliland.
+                    farmer get customised crop advisory and daily updated market
+                    prices, while also connecting farmers directly with buyers
+                    to ensure they get the best prices for their products.
+
                     <a
                       style="color: green"
                       href="https://disrupt-africa.com/2018/04/20/meet-sams-somalias-first-marketplace-for-farm-goods/"
@@ -107,7 +110,7 @@
                       </li>
                       <li>
                         <i class="fas fa-envelope-open-text"></i>
-                        <p>Mail: hi@roblecodes.com</p>
+                        <p>Mail: abdulladif0042@gmail.com</p>
                       </li>
                     </ul>
                     <span class="bash"></span>
@@ -117,10 +120,7 @@
                   <div class="about-social">
                     <ul>
                       <li>
-                        <a
-                          href="https://www.linkedin.com/in/abdulladif-roble-892681118/"
-                          ><i class="fab fa-linkedin-in"></i
-                        ></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
                       </li>
                       <li>
                         <a href="https://github.com/ARoble"
@@ -132,7 +132,7 @@
                           ><i class="fab fa-twitter"></i
                         ></a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a
                           class="venobox"
                           data-autoplay="true"
@@ -141,7 +141,7 @@
                         >
                           <span>Play</span><i class="far fa-play-circle"></i>
                         </a>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
                   <!-- About Social End -->
